# tabep

./: .gitignore  README.md  README_zh.md  main.py  pyproject.toml
.agent/: commands.json
.agent/rules/: tabep.md
.agent/workflows/: explore.md  reproduce-paper1.md  reproduce-paper2.md
docs/: reproduce.md
scripts/: compute_efficiency.py  make_paper1_figures.py  run_seed_study.py
src/tabep/: __init__.py  cli.py  data.py  experiment.py  lit.py  model.py  module.py  tabep.py  tabular.py  tabular_benchmark.py  tilelang_classifiers.py  tilelang_dynamics.py  tilelang_utils.py  train.py
src/tabep/conf/: mnist.yaml
src/tabep/reports/: __init__.py  drug200_clustering.py
