[project]
name = "tabep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"datasets>=4.8.5",
	"fvcore>=0.1.5.post20221221",
	"hydra-core>=1.3.2",
	"matplotlib>=3.10.9",
	"numpy>=2.4.6",
	"pillow>=12.2.0",
	"pytorch-lightning>=2.6.4",
	"scikit-learn>=1.8.0",
	"swanlab>=0.7.19",
	"thop>=0.1.1.post2209072238",
	"tilelang>=0.1.9",
	"torch>=2.11.0",
	"typer>=0.25.1",
	"ucimlrepo>=0.0.7",
]

[project.scripts]
tabep = "tabep.cli:main"
tabep-drug200 = "tabep.tabular_benchmark:main"
tabep-drug200-clustering = "tabep.reports.drug200_clustering:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
